[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/palette.bmp" type="Texture" id=1]
[ext_resource path="res://assets/GUI/healthbar.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/buttonunpressed1.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/buttonunpressed2.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/buttonpressed 2.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/buttonpressed1.png" type="Texture" id=6]
[ext_resource path="res://assets/items/mrpresidentdefense.png" type="Texture" id=7]
[ext_resource path="res://assets/items/mrpresidentdefensedead.png" type="Texture" id=8]
[ext_resource path="res://src/particles/bossdefenseweapon.gd" type="Script" id=9]
[ext_resource path="res://src/particles/boss_defense_attack.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/ui/health_bar.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/fonts/Orwell.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://src/interactables/bossdefense.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 66.5, 80 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "die1",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "die2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle2",
"speed": 5.0
} ]

[sub_resource type="StyleBoxTexture" id=3]
margin_right = 10.0491
margin_top = 52.822
margin_bottom = 57.0785

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 45, 21 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 45, 21 )
modulate_color = Color( 0.372549, 0.513726, 0.247059, 1 )

[sub_resource type="Theme" id=13]
resource_local_to_scene = true
default_font = SubResource( 11 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/styles/buttontexture = SubResource( 3 )
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 7 )
Button/styles/pressed = SubResource( 8 )
ColorPicker/icons/add_preset = null
ColorPicker/icons/color_hue = null
ColorPicker/icons/color_sample = ExtResource( 1 )
ColorPicker/icons/overbright_indicator = null
Fonts/fonts/large = SubResource( 11 )
Fonts/fonts/normal = SubResource( 11 )
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/styles/bg = SubResource( 9 )
ProgressBar/styles/fg = SubResource( 12 )
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/bookmark_color = Color( 0.08, 0.49, 0.98, 1 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0.262745, 0.156863, 0.180392, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87, 0.87, 0.87, 0.13 )
TextEdit/colors/completion_font_color = Color( 0.67, 0.67, 0.67, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 0.29 )
TextEdit/colors/completion_selected_color = Color( 0.14902, 0.0666667, 0.0666667, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/executing_line_color = Color( 0.2, 0.8, 0.2, 0.4 )
TextEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/font_color_readonly = Color( 0.88, 0.88, 0.88, 0.5 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.64, 0.81, 1 )
TextEdit/colors/line_number_color = Color( 0.67, 0.67, 0.67, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.9, 0.31, 0.35, 1 )
TextEdit/colors/number_color = Color( 0.92, 0.58, 0.2, 1 )
TextEdit/colors/safe_line_number_color = Color( 0.67, 0.78, 0.67, 0.6 )
TextEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
TextEdit/colors/symbol_color = Color( 0.94, 0.94, 0.94, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 6
TextEdit/constants/line_spacing = 4
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = null
TextEdit/styles/read_only = null

[node name="debris" type="Area2D"]
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 2 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "die2"

[node name="HealthBar" parent="." instance=ExtResource( 11 )]
margin_left = -23.0
margin_top = 16.0
margin_right = 17.0
margin_bottom = 37.0
theme = SubResource( 13 )

[node name="deathtimer" type="Timer" parent="."]
wait_time = 0.1

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -2.5 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="regen" type="Timer" parent="."]
wait_time = 5.0

[node name="slow aura" type="CollisionShape2D" parent="."]

[node name="bossdefenseweapon" type="Position2D" parent="."]
script = ExtResource( 9 )
block = ExtResource( 10 )
zap = ExtResource( 10 )

[node name="cooldowntimer" type="Timer" parent="."]

[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
[connection signal="timeout" from="regen" to="." method="_on_regen_timeout"]
[connection signal="timeout" from="cooldowntimer" to="." method="_on_cooldowntimer_timeout"]
